# DodecaDog

./: .gitignore  3Dplot.py  3dplots.ipynb  LICENSE  README.md  allelements.py  demobrowser.py  edit_table.py  hyperlinks.py  pyproject.toml  requirements.txt  snippets.ipynb  snippets.py  surface,py  test.py  tests.ipynb  tooltips.py
dodecadog/: __init__.py  core.py  fonts.py  gui.py  main.py  tk_tools.py
dodecadog/assets/: data.csv
psg_app_template/: .gitignore  app_main.py  app_module.py  app_version_info.txt  create_version_file.py  requirements.txt  shell_build_app_exe.ps1  shell_clone_app_env.ps1  shell_update_app_env.ps1
psg_app_template/app_package/: __init.__py  pgk_module.py
scripts/: app_version_info.txt  build_gui_app.ps1  create_version_file.py
tests/: snippets.py  test.py
