[tool.poetry]
name = "dodecadog"
version = "0.1.0"
description = ""
authors = ["Scott-Baldwin <superscottyb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.11.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
