[tool.poetry]
name = "dodecadog"
version = "0.1.0"
description = ""
authors = ["Scott-Baldwin <superscottyb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dearpygui = "^1.11.1"
psutil = "^6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.9.0"
pyinstaller-versionfile = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
